--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "mern_shopping_list",
+  "name": "shopping-list",
   "version": "1.0.0",
   "description": "Shopping list built with the MERN stack",
   "main": "server.js",
   "scripts": {
-    "client-install": "npm install --prefix client",
+    "client-install": "npm i --prefix client",
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "author": "Brad Traversy",
-  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": ""
+  },
+  "homepage": "",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "concurrently": "^3.6.0",
-    "config": "^3.0.1",
-    "express": "^4.16.3",
-    "jsonwebtoken": "^8.5.0",
-    "mongoose": "^5.1.6"
+    "body-parser": "^1.18.3",
+    "concurrently": "^4.1.0",
+    "express": "^4.16.4",
+    "mongoose": "^5.4.20"
   },
   "devDependencies": {
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.18.10"
   }
 }
