--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,12 @@
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^6.0.1",
     "react-scripts": "2.1.8",
     "react-transition-group": "^2.7.1",
     "reactstrap": "^7.1.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
   },
   "scripts": {
