--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
   },
   "homepage": "",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.0",
+    "config": "^3.0.1",
     "express": "^4.16.4",
-    "mongoose": "^5.4.20"
+    "i": "^0.3.6",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.4.20",
+    "npm": "^6.9.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
